# PySimbirsoft

./: .gitignore  docker-compose.yml  manage.py
general_service/: Dockerfile  pyproject.toml  requirements.txt
general_service/src/: .env.example  config.py
general_service/src/api/: __init__.py  asgi.py  initializator.py  integrate.py  main.py  schemas.py  views.py
general_service/src/api/views/: goods.py  users.py
goods/: Dockerfile  README.md  asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
goods/api/: models.py  serializer.py  settings.py  urls.py  views.py  wsgi.py  yasg.py
goods/fixtures/: initial_data.json
mail_service/: Dockerfile  README.md  pyproject.toml  requirements.txt
mail_service/src/: .env.example  config.py
mail_service/src/api/: __init__.py  asgi.py  listener.py  main.py  models.py  views.py
monitoring_service/: Dockerfile  celery-worker.Dockerfile  config.py  pyproject.toml  requirements.txt  worker.py
monitoring_service/api/: __init__.py  main.py  models.py  schemas.py  views.py
postgres_dockerfile/: postgres  postgres_init.sql
user_service/: .env.example  Dockerfile  README.md  alembic.ini  config.py  main.py  requirements.txt
user_service/alembic/: env.py
user_service/alembic/versions/: 0ca03f059102_username_unique_fix.py  f82737c807ce_declarative_base.py  fe531bc68737_first_add.py
user_service/api/: config.py  db.py  decorators.py  errors.py  middlewares.py  redis.py  routes.py  swagger.yaml  utils.py  views.py
