[tool.poetry]
name = "general_service"
version = "1.0.0"
description = "integration service"
authors = ["scumethy <scume7hy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
httpx = "^0.14.2"
aioredis = "^1.3.1"
aio_pika = "^6.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
