[tool.poetry]
name = "monitoring_service"
version = "1.0.0"
description = ""
authors = ["scumethy <scume7hy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
aio-pika = "^6.6.1"
psycopg2-binary = "^2.8.5"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
celery = "^4.4.7"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
